fixed overlap on logo

--- a/public/mczub.css
+++ b/public/mczub.css
@@ -59,7 +59,7 @@ a:active {
 }
 .biglogo
 {
-	width:400px;
+	width:350px;
 	top:20px;
 	padding-left:20px;
 	padding-right:20px;
